modified shk/aa inductions

--- a/April-Notebook.Rmd
+++ b/April-Notebook.Rmd
@@ -109,19 +109,69 @@ ggplot(kkl.collapseROI) + aes(CONTEXT, mean_density, fill=EXPT, color = EXPT) + 
 ```{r, echo=F, fig.width = 4, fig.height = 2, message=FALSE, warning=FALSE}
 
 library(plyr)
-shock.induction = ddply(kk.long, .(CHANNEL, SUBROI, EXPT), transform, norm = scale(DENSITY))
-shock.induction = dcast(shock.induction, CHANNEL + SUBROI + EXPT ~ VALENCE,
+shock.induction = ddply(kk.long, .(CHANNEL, BATCH), transform, norm = scale(DENSITY))
+shock.induction = dcast(shock.induction, CHANNEL + SUBROI + EXPT + CONTEXT ~ VALENCE,
                         value.var = "norm", fun.aggregate = mean)
+colnames(shock.induction)[4] = "CONTEXT2"
 shock.induction$DIFFNORM = shock.induction$SHOCK - shock.induction$CONTEXT
+
+# make for loop for all
+channels.list = c("DAPI", "H2BGFP", "GFAP", "ArcIHC", "OL", "NormOL")
+
+for (i in channels.list) {
+  title.paste = paste("Relative shock induction in", i)
+  
+  ggplot(shock.induction %>% filter(CHANNEL==i)) + 
+    aes(reorder(SUBROI, DIFFNORM), DIFFNORM, color=EXPT) + 
+    stat_summary(fun.y = mean, geom="point") +
+    stat_summary(fun.data = mean_se, geom="linerange") +
+    geom_hline(yintercept = 0) + 
+    # facet_wrap(~EXPT) +
+    # coord_flip 
+    ggtitle(title.paste) + 
+    theme(axis.text.x = element_text(angle = 90, hjust = 1))
+}
+
+
+ggplot(shock.induction %>% filter(CHANNEL=="DAPI")) + 
+  aes(reorder(SUBROI, DIFFNORM), DIFFNORM, color=EXPT) + 
+  stat_summary(fun.y = mean, geom="point") +
+  stat_summary(fun.data = mean_se, geom="linerange") +
+  geom_hline(yintercept = 0) + 
+  facet_wrap(~CONTEXT2, ncol=1) +
+  # coord_flip() +
+  ggtitle("Relative shock induction in DAPI") + 
+  theme(axis.text.x = element_text(angle = 90, hjust = 1))
 
 ggplot(shock.induction %>% filter(CHANNEL=="H2BGFP")) + 
   aes(reorder(SUBROI, DIFFNORM), DIFFNORM, color=EXPT) + 
   stat_summary(fun.y = mean, geom="point") +
   stat_summary(fun.data = mean_se, geom="linerange") +
   geom_hline(yintercept = 0) + 
-  # facet_wrap(~EXPT) +
-  # coord_flip
+  facet_wrap(~CONTEXT2, ncol=1) +
+  # coord_flip() +
   ggtitle("Relative shock induction in H2BGFP") + 
+  theme(axis.text.x = element_text(angle = 90, hjust = 1))
+
+ggplot(shock.induction %>% filter(CHANNEL=="GFAP")) + 
+  aes(reorder(SUBROI, DIFFNORM), DIFFNORM, color=EXPT) + 
+  stat_summary(fun.y = mean, geom="point") +
+  stat_summary(fun.data = mean_se, geom="linerange") +
+  geom_hline(yintercept = 0) + 
+  facet_wrap(~CONTEXT2, ncol=1) +
+  # coord_flip() +
+  ggtitle("Relative shock induction in GFAP") + 
+  theme(axis.text.x = element_text(angle = 90, hjust = 1))
+
+
+ggplot(shock.induction %>% filter(CHANNEL=="OL")) + 
+  aes(reorder(SUBROI, DIFFNORM), DIFFNORM, color=EXPT) + 
+  stat_summary(fun.y = mean, geom="point") +
+  stat_summary(fun.data = mean_se, geom="linerange") +
+  geom_hline(yintercept = 0) + 
+  facet_wrap(~CONTEXT2, ncol=1) +
+  # coord_flip() +
+  ggtitle("Relative shock induction in OL") + 
   theme(axis.text.x = element_text(angle = 90, hjust = 1))
   
 ggplot(shock.induction %>% filter(CHANNEL=="ArcIHC")) + 
@@ -129,16 +179,69 @@ ggplot(shock.induction %>% filter(CHANNEL=="ArcIHC")) +
   stat_summary(fun.y = mean, geom="point") +
   stat_summary(fun.data = mean_se, geom="linerange") +
   geom_hline(yintercept = 0) + 
-  # facet_wrap(~EXPT) + coord_flip() +
+  facet_wrap(~CONTEXT2, ncol=1) +
+  # coord_flip() +
   ggtitle("Relative shock induction in ArcIHC") + 
   theme(axis.text.x = element_text(angle = 90, hjust = 1))
 
+ggplot(shock.induction %>% filter(CHANNEL=="NormOL")) + 
+  aes(reorder(SUBROI, DIFFNORM), DIFFNORM, color = EXPT) + 
+  stat_summary(fun.y = mean, geom="point") +
+  stat_summary(fun.data = mean_se, geom="linerange") +
+  geom_hline(yintercept = 0) + 
+  facet_wrap(~CONTEXT2, ncol=1) +
+  # coord_flip() +
+  ggtitle("Relative shock induction in NormOL") + 
+  theme(axis.text.x = element_text(angle = 90, hjust = 1))
 
-aa.induction = ddply(kk.long, .(CHANNEL, SUBROI, EXPT),
+
+
+aa.induction = ddply(kk.long, .(CHANNEL, SUBROI, BATCH),
                      transform, norm = scale(DENSITY))
-aa.induction = dcast(aa.induction, CHANNEL + SUBROI + EXPT ~ CONTEXT,
+aa.induction = dcast(aa.induction, CHANNEL + SUBROI + EXPT + VALENCE ~ CONTEXT,
                      value.var = "norm", fun.aggregate = mean)
 aa.induction$DIFFNORM = aa.induction$AA - aa.induction$AB
+
+
+ggplot(aa.induction %>% filter(CHANNEL == 'DAPI')) +
+  aes(reorder(SUBROI, DIFFNORM), DIFFNORM, color=EXPT) +
+  stat_summary(fun.y = mean, geom = "point") +
+  stat_summary(fun.data = mean_se, geom='linerange') +
+  geom_hline(yintercept = 0) +
+  ggtitle("Relative AA induction in DAPI") +
+  theme(axis.text.x = element_text(angle = 90, hjust=1)) +
+  facet_wrap(~VALENCE, ncol=1) 
+  # coord_flip() +
+
+ggplot(aa.induction %>% filter(CHANNEL == 'H2BGFP')) +
+  aes(reorder(SUBROI, DIFFNORM), DIFFNORM, color=EXPT) +
+  stat_summary(fun.y = mean, geom = "point") +
+  stat_summary(fun.data = mean_se, geom='linerange') +
+  geom_hline(yintercept = 0) +
+  ggtitle("Relative AA induction in H2BGFP") +
+  theme(axis.text.x = element_text(angle = 90, hjust=1))  +
+  facet_wrap(~VALENCE, ncol=1) 
+  # coord_flip() +
+
+ggplot(aa.induction %>% filter(CHANNEL == 'GFAP')) +
+  aes(reorder(SUBROI, DIFFNORM), DIFFNORM, color=EXPT) +
+  stat_summary(fun.y = mean, geom = "point") +
+  stat_summary(fun.data = mean_se, geom='linerange') +
+  geom_hline(yintercept = 0) +
+  ggtitle("Relative AA induction in GFAP") +
+  theme(axis.text.x = element_text(angle = 90, hjust=1))  +
+  facet_wrap(~VALENCE, ncol=1) 
+  # coord_flip() +
+
+ggplot(aa.induction %>% filter(CHANNEL == 'ArcIHC')) +
+  aes(reorder(SUBROI, DIFFNORM), DIFFNORM, color=EXPT) +
+  stat_summary(fun.y = mean, geom = "point") +
+  stat_summary(fun.data = mean_se, geom='linerange') +
+  geom_hline(yintercept = 0) +
+  ggtitle("Relative AA induction in ArcIHC") +
+  theme(axis.text.x = element_text(angle = 90, hjust=1)) +
+  facet_wrap(~VALENCE, ncol=1) 
+  # coord_flip() +
 
 ggplot(aa.induction %>% filter(CHANNEL == 'OL')) +
   aes(reorder(SUBROI, DIFFNORM), DIFFNORM, color=EXPT) +
@@ -146,7 +249,9 @@ ggplot(aa.induction %>% filter(CHANNEL == 'OL')) +
   stat_summary(fun.data = mean_se, geom='linerange') +
   geom_hline(yintercept = 0) +
   ggtitle("Relative AA induction in OL") +
-  theme(axis.text.x = element_text(angle = 90, hjust=1))
+  theme(axis.text.x = element_text(angle = 90, hjust=1))  +
+  facet_wrap(~VALENCE, ncol=1) 
+  # coord_flip() +
 
 
 ggplot(aa.induction %>% filter(CHANNEL == 'NormOL')) +
@@ -155,15 +260,10 @@ ggplot(aa.induction %>% filter(CHANNEL == 'NormOL')) +
   stat_summary(fun.data = mean_se, geom='linerange') +
   geom_hline(yintercept = 0) +
   ggtitle("Relative AA induction in NormOL") +
-  theme(axis.text.x = element_text(angle = 90, hjust=1))
+  theme(axis.text.x = element_text(angle = 90, hjust=1)) +
+  facet_wrap(~VALENCE, ncol=1) 
+  # coord_flip() +
 
-ggplot(aa.induction %>% filter(CHANNEL == 'ArcIHC')) +
-  aes(reorder(SUBROI, DIFFNORM), DIFFNORM, color=EXPT) +
-  stat_summary(fun.y = mean, geom = "point") +
-  stat_summary(fun.data = mean_se, geom='linerange') +
-  geom_hline(yintercept = 0) +
-  ggtitle("Relative AA induction in ArcIHC") +
-  theme(axis.text.x = element_text(angle = 90, hjust=1))
 
 ```
 
@@ -180,25 +280,56 @@ ggplot(aa.induction %>% filter(CHANNEL == 'ArcIHC')) +
 # 4. How about overlap differences in AA vs AB?
 - Positive numbers mean more overlap in AA than in AB group, vice versa. 
 
-```{r, echo=F, fig.width = 2, fig.height = 4, message=FALSE, warning=FALSE}
+```{r, echo=F, fig.width = 4, fig.height = 3, message=FALSE, warning=FALSE}
 
-ol.induction = plyr::ddply(kk.long, .(CHANNEL, SUBROI, EXPT), transform, norm = scale(DENSITY))
-ol.induction = dcast(ol.induction, CHANNEL + SUBROI + EXPT ~ CONTEXT,
+ol.induction = plyr::ddply(kk.long, .(CHANNEL, BATCH), transform, norm = scale(DENSITY))
+ol.induction = dcast(ol.induction, CHANNEL + SUBROI + EXPT + VALENCE ~ CONTEXT,
                         value.var = "norm", fun.aggregate = mean)
 ol.induction$DIFFNORM = ol.induction$AA - ol.induction$AB
 
-ggplot(shock.induction %>% filter(CHANNEL=="OL")) + 
+ggplot(ol.induction %>% filter(CHANNEL=="GFAP")) + 
   aes(reorder(SUBROI, DIFFNORM), DIFFNORM, color = EXPT) + 
   stat_summary(fun.y = mean, geom="point") +
   stat_summary(fun.data = mean_se, geom="linerange") +
-  coord_flip() + geom_hline(yintercept = 0) + 
+  geom_hline(yintercept = 0) + 
   #facet_wrap(~EXPT) +
-  ggtitle("Relative OL induction (in AA vs AB)")
+  ggtitle("Relative GFAP induction (in AA vs AB)") +
+  theme(axis.text.x = element_text(angle = 90, hjust=1)) +
+  facet_wrap(~VALENCE,ncol = 1)
 
 ```
 
 
+# check the straight up intensity levels
 
+```{r, fig.width = 16, fig.height = 4}
+rx = theme(axis.text.x = element_text(angle = 90, hjust = 1))
+
+# intensity.list = c("Ch4.Mean.", "Ch3.Mean.")
+# 
+# kk$ID = as.factor(kk$ID)
+# 
+# for (x in intensity.list) {
+#   id = "ID"
+#   print(
+#     ggplot(raw) + aes_string(reorder(id, x), x) + geom_violin() +rx + facet_wrap(~Z.Level.)
+#   )
+# }
+raw$ID = as.factor(raw$ID)
+
+ggplot(raw) + aes(reorder(ID, Ch3.Mean.), Ch3.Mean.) + geom_boxplot() +rx + facet_wrap(~Z.Level.) +
+  ggtitle("GFAP intensity")
+
+ggplot(raw) + aes(reorder(ID, Ch4.Mean.), Ch4.Mean.) + geom_boxplot() +rx + facet_wrap(~Z.Level.) +
+  ggtitle("ArcIHC intensity")
+
+ggplot(raw) + aes(reorder(ID, Ch2.Mean.), Ch2.Mean.) + geom_violin() +rx + facet_wrap(~Z.Level.) +
+  ggtitle("H2B intensity") + ylim(0,10000)
+
+ggplot(raw) + aes(reorder(ID, Ch1.Mean.), Ch1.Mean.) + geom_violin() +rx + facet_wrap(~Z.Level.) +
+  ggtitle("DAPI intensity")
+
+```
 
 
 
